# Embedded_Linux

./: .menu_script.sh.swp  README.md  menu_script.sh
Admin_Linux_/: README.md  checkifexe.sh  menu_script.sh
Admin_Linux_/AdminLinux_Task1/: Linuxx_script1.sh
Admin_Linux_/AdminLinux_Task2/: Binary_search.c
BOOTLOADER/Qemu_installation/: Qemu Installation.md
BOOTLOADER/SD_Card/: Virtiual_SD_Card.md
BOOTLOADER/U-BOOT/: U-BOOT.md
Embedded_Linux3/: CMAKE.md
Embedded_Linux3/Cmake_Calculator_dynamic_lib/: CMakeLists.txt  main.c
Embedded_Linux3/Cmake_Calculator_dynamic_lib/Lib/: divide.c  subtract.c
Embedded_Linux3/Cmake_Calculator_static_lib/: CMakeLists.txt
Embedded_Linux_1_2/: Embedded Linux.md
Embedded_Linux_1_2/Calculator_Dynamic_lib/: main.c
Embedded_Linux_1_2/Calculator_Dynamic_lib/Lib/: modulus.c
Embedded_Linux_1_2/Calculator_static_lib/: app
Embedded_Linux_4/: Crosstool-ng.md
Linux_Library/: Embedded Linux Library.md
Linux_Library/Calculator_Dynamic_lib/Lib/: add.c  task.txt
Linux_Library/Calculator_static_lib/Include/: calc.h
Linux_Library_CMake/: CMAKE.md
Linux_Library_CMake/Cmake_Calculator_dynamic_lib/Lib/: multiply.c
Linux_Library_CMake/Cmake_Calculator_static_lib/: CMakeLists.txt
The YOCTO Project/: Yocto.md
The YOCTO Project/YOCTO_ROBOT_IMAGE/: YOCTO_ROBOT_IMAGE.md
The YOCTO Project/YOCTO_ROBOT_IMAGE/conf/: bblayers.conf  local.conf
